fix alignment

--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ h3 {
 .everyone-else {
   display: flex;
   flex-direction: row;
-  padding: 0vw 12.5vw;
+  padding: 0vw 18.5vw;
 }
 
 figure {
